# contextvault

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PROJECT_BRIEF.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
docs/: ARCHITECTURE.md  ContextVault-API.postman_collection.json  DEVELOPMENT.md  GAP_ANALYSIS.md  GIT_REFACTOR_BRIEF.md  HOURLY_CHECKIN.md  MULTITENANT_STORAGE.md  PHASE_10_PLAN.md  PHASE_11_PLAN.md  PHASE_12_PLAN.md  PHASE_13_PLAN.md  PHASE_9_PLAN.md  PM_NOTES.md  PM_TRACKER.md  README.md  REST_API.md  SDK_PLAN.md  SECURITY_MODEL.md  STORAGE_LAYER.md  SUMMARY_LAYER_IDEAS.md  TASK_full_git_clone.md
docs/api/: workspaces.md
docs/quickstart/: php.md  python.md  typescript.md
mcp/: README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: index.mjs  index.ts
scripts/: hourly-check.sh  migrate-existing-tenants.ts
sdk/php/: README.md  composer.json
sdk/python/: README.md  pyproject.toml  test_sdk.py
sdk/python/src/: __init__.py  apikeys.py  client.py  exceptions.py  webhooks.py  workspaces.py
sdk/typescript/: README.md  package-lock.json  package.json
src/: index.ts
src/db/: client.ts  index.ts
src/middleware/: auth.ts  tenant.ts
src/routes/: analytics.ts  apikeys.ts  commits.ts  git-remote.ts  runs.ts  sandbox.ts  vault-browser.ts  webhooks.ts  workspaces.ts
src/scripts/: setup-tables.ts
src/services/: apikey.service.ts  audit.service.ts  commit-gateway.service.ts  commit.service.ts  config.service.ts  conflict.service.ts  layout.service.ts  (+10 more)
ui/: package-lock.json  vite.config.ts
(+61 files in other folders)
