[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "contextvault"
version = "0.1.0"
description = "Official Python SDK for ContextVault"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/contextvault/contextvault-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
